--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "form-data": "^2.3.1",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
+    "mongodb": "^2.2.33",
     "node-fetch": "^1.7.3",
     "string-to-stream": "^1.1.0"
   },
@@ -24,6 +25,7 @@
     "@types/form-data": "^2.2.0",
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.23",
+    "@types/mongodb": "^2.2.15",
     "@types/node-fetch": "^1.6.7",
     "concurrently": "^3.5.0",
     "nodemon": "^1.12.1",
