--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.5.1",
     "form-data": "^2.3.1",
     "koa": "^2.3.0",
+    "koa-body": "^2.5.0",
     "koa-router": "^7.2.1",
     "mongodb": "^2.2.33",
     "node-fetch": "^1.7.3",
