Install and setup babel-cli and babel-plugin-module-resolver to support absolute paths in imports

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node dist",
-    "build": "tsc && npm run copy-json",
+    "start": "node dist/babel/src",
+    "build": "npm run build-clear && npm run build-ts && npm run build-babel",
     "lint": "tslint -p .",
-    "watch": "concurrently --kill-others \"tsc -w\" \"nodemon dist\"",
+    "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon dist/babel/src\"",
     "test": "npm run build && alsatian './dist/test/**/*.js'",
-    "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/src/"
+    "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
+    "build-clear": "rm -rf dist",
+    "build-ts": "tsc && npm run copy-json",
+    "build-babel": "cp .babelrc dist/ts && babel dist/ts/ -d dist/babel --copy-files",
+    "watch-babel": "cp .babelrc dist/ts && babel -w dist/ts/ -d dist/babel --copy-files"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +39,8 @@
     "@types/mongodb": "^2.2.15",
     "@types/node-fetch": "^1.6.7",
     "alsatian": "^2.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-module-resolver": "^3.0.0",
     "concurrently": "^3.5.0",
     "nodemon": "^1.12.1",
     "tslint": "^5.8.0",
