--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build-clear && npm run build-ts && npm run build-babel",
     "lint": "tslint -p .",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon dist/babel/src\"",
-    "test": "npm run build && alsatian './dist/test/**/*.js'",
+    "test": "npm run build && alsatian './dist/babel/test/**/*.js'",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
     "build-clear": "rm -rf dist",
     "build-ts": "tsc && npm run copy-json",
