--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "npm run build-clear && npm run build-ts && npm run build-babel",
     "lint": "tslint -p .",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon dist/babel/src\"",
-    "test": "npm run build && npm run test-only",
-    "test-only": "nyc alsatian './dist/babel/test/**/*.js'",
+    "test": "npm run build && npm run test-unit",
+    "test-unit": "nyc alsatian './dist/babel/test/Unit/**/*.js'",
+    "test-integration": "nyc alsatian './dist/babel/test/Integration/**/*.js'",
     "coverage": "nyc --reporter=lcov report && echo Report created at ./coverage/lcov-report/index.html",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
     "build-clear": "rm -rf dist",
