--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-router": "^7.2.1",
     "mongodb": "^2.2.33",
     "node-fetch": "^1.7.3",
+    "poet-js": "^1.0.0",
     "protobufjs": "^6.8.0",
     "reflect-metadata": "^0.1.10",
     "string-to-stream": "^1.1.0"
