--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "koa-router": "^7.2.1",
     "mongodb": "^2.2.33",
     "node-fetch": "^1.7.3",
-    "poet-js": "^1.0.0",
+    "poet-js": "^1.0.3",
     "protobufjs": "^6.8.0",
     "reflect-metadata": "^0.1.10",
     "string-to-stream": "^1.1.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.4",
+    "@types/bitcore-lib": "^0.15.0",
     "@types/form-data": "^2.2.0",
     "@types/koa": "^2.0.39",
     "@types/koa-router": "^7.0.23",
