--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "inversify": "^4.5.1",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^7.2.1",
     "mongodb": "^2.2.33",
     "node-fetch": "^1.7.3",
