Logging with Pino JS (#65)

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-router": "^7.2.1",
     "mongodb": "^3.0.1",
     "node-fetch": "^1.7.3",
+    "pino": "^4.16.1",
     "poet-js": "^1.0.3",
     "protobufjs": "^6.8.0",
     "reflect-metadata": "^0.1.10",
@@ -45,6 +46,7 @@
     "@types/koa-router": "^7.0.23",
     "@types/mongodb": "^3.0.9",
     "@types/node-fetch": "^1.6.7",
+    "@types/pino": "^4.7.1",
     "alsatian": "^2.0.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-module-resolver": "^3.0.0",
