pins package versions in package.json (#72)

--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.5.1",
-    "bitcore-lib": "^0.15.0",
-    "form-data": "^2.3.1",
-    "inversify": "^4.5.1",
-    "koa": "^2.3.0",
-    "koa-body": "^2.5.0",
+    "amqplib": "0.5.1",
+    "bitcore-lib": "0.15.0",
+    "form-data": "2.3.1",
+    "inversify": "4.5.1",
+    "koa": "2.3.0",
+    "koa-body": "2.5.0",
     "koa-cors": "0.0.16",
-    "koa-router": "^7.2.1",
-    "mongodb": "^3.0.1",
-    "node-fetch": "^1.7.3",
-    "pino": "^4.16.1",
-    "poet-js": "^1.0.3",
-    "protobufjs": "^6.8.0",
-    "reflect-metadata": "^0.1.10",
-    "string-to-stream": "^1.1.0"
+    "koa-router": "7.2.1",
+    "mongodb": "3.0.5",
+    "node-fetch": "1.7.3",
+    "pino": "4.16.1",
+    "poet-js": "1.0.3",
+    "protobufjs": "6.8.0",
+    "reflect-metadata": "0.1.10",
+    "string-to-stream": "1.1.0"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.5.4",
-    "@types/bitcore-lib": "^0.15.0",
-    "@types/form-data": "^2.2.0",
-    "@types/koa": "^2.0.39",
-    "@types/koa-router": "^7.0.23",
-    "@types/mongodb": "^3.0.9",
-    "@types/node-fetch": "^1.6.7",
-    "@types/pino": "^4.7.1",
-    "alsatian": "^2.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.12.1",
-    "nyc": "^11.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.1"
+    "@types/amqplib": "0.5.4",
+    "@types/bitcore-lib": "0.15.0",
+    "@types/form-data": "2.2.0",
+    "@types/koa": "2.0.39",
+    "@types/koa-router": "7.0.23",
+    "@types/mongodb": "3.0.9",
+    "@types/node-fetch": "1.6.7",
+    "@types/pino": "4.7.1",
+    "alsatian": "2.0.0",
+    "babel-cli": "6.26.0",
+    "babel-plugin-module-resolver": "3.0.0",
+    "concurrently": "3.5.0",
+    "nodemon": "1.12.1",
+    "nyc": "11.3.0",
+    "tslint": "5.8.0",
+    "typescript": "2.6.1"
   }
 }
