fixes lint failures (#87)
Previously there were many lint failures after refactoring to use the
@po.et/tlsint-rules npm package.

This commit fixes all lint failures and re-enables linting on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - npm start &
   - sleep 5
 script:
-  # - npm run lint
+  - npm run lint
   - npm run test
 after_script:
   - greenkeeper-lockfile-upload
