--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "string-to-stream": "1.1.0"
   },
   "devDependencies": {
-    "@po.et/tslint-rules": "^1.0.0",
+    "@po.et/tslint-rules": "1.1.0",
     "@types/amqplib": "0.5.4",
     "@types/bitcore-lib": "0.15.0",
     "@types/form-data": "2.2.0",
