--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ script:
 after_script:
 - greenkeeper-lockfile-upload
 after_success:
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
   - export REPO=poetapp/node
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  - docker build -f Dockerfile -t $REPO:$COMMIT .
+  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASS
+  - docker build -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:$TAG
   - docker tag $REPO:$COMMIT $REPO:v$TRAVIS_BUILD_NUMBER
   - docker push $REPO
