--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
 - docker build -t $REPO:$COMMIT .
 - docker tag $REPO:$COMMIT $REPO:$TAG
-- docker tag $REPO:$COMMIT $REPO:v$TRAVIS_BUILD_NUMBER
+- docker tag $REPO:$COMMIT $REPO:$TRAVIS_BUILD_NUMBER
 - docker push $REPO
 env:
   global:
