--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@po.et/poet-js": "1.2.0",
     "amqplib": "0.5.2",
     "bitcore-lib": "0.15.0",
     "form-data": "2.3.2",
@@ -41,7 +42,6 @@
     "mongodb": "3.0.8",
     "node-fetch": "1.7.3",
     "pino": "4.16.1",
-    "poet-js": "1.0.3",
     "protobufjs": "6.8.6",
     "reflect-metadata": "0.1.12",
     "string-to-stream": "1.1.1"
