Add code owners (#140)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,3 @@
-*   @lautarodragan
+*                    @lautarodragan
+/package.json        @lautarodragan @warrenv @wzalazar
+/package-lock.json   @lautarodragan @warrenv @wzalazar
