--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "koa": "2.5.1",
     "koa-body": "4.0.1",
     "koa-cors": "0.0.16",
+    "koa-helmet": "4.0.0",
     "koa-router": "7.4.0",
     "mongodb": "3.0.8",
     "node-fetch": "1.7.3",
@@ -52,6 +53,7 @@
     "@types/bitcore-lib": "0.15.0",
     "@types/form-data": "2.2.1",
     "@types/koa": "2.0.46",
+    "@types/koa-helmet": "3.1.2",
     "@types/koa-router": "7.0.28",
     "@types/mongodb": "3.0.19",
     "@types/node-fetch": "1.6.9",
