adds unit testing tools (#154)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "lint": "tslint -p ./tsconfig.json",
     "lint:fix": "tslint -p ./tsconfig.json --fix",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon dist/babel/src\"",
-    "test": "nyc alsatian './dist/babel/test/Integration/**/*.js'",
-    "test-unit": "nyc alsatian './dist/babel/test/Unit/**/*.js'",
-    "test-integration": "nyc alsatian './dist/babel/test/Integration/**/*.js'",
+    "pretest": "npm run test-prepare-db",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "ts-node ./tests/unit/index.ts",
+    "test:integration": "nyc alsatian './dist/babel/test/Integration/**/*.js'",
     "coverage": "nyc --reporter=lcov report && echo Report created at ./coverage/lcov-report/index.html",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
     "build-clear": "rm -rf dist",
@@ -58,12 +59,16 @@
     "@types/mongodb": "3.0.19",
     "@types/node-fetch": "1.6.9",
     "@types/pino": "4.7.1",
+    "@types/sinon": "5.0.1",
     "alsatian": "2.2.1",
     "babel-cli": "6.26.0",
     "babel-plugin-module-resolver": "3.1.1",
     "concurrently": "3.5.1",
     "nodemon": "1.17.4",
     "nyc": "12.0.2",
+    "riteway": "2.0.4",
+    "sinon": "6.0.0",
+    "ts-node": "6.1.1",
     "typescript": "2.8.3"
   }
 }
