--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 *                    @lautarodragan
-/package.json        @lautarodragan @warrenv @wzalazar
-/package-lock.json   @lautarodragan @warrenv @wzalazar
+/package.json        @lautarodragan @poetapp/quality-engineering
+/package-lock.json   @lautarodragan @poetapp/quality-engineering
