--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "form-data": "2.3.2",
     "inversify": "4.13.0",
     "koa": "2.5.1",
-    "koa-body": "4.0.1",
+    "koa-body": "4.0.3",
     "koa-cors": "0.0.16",
     "koa-helmet": "4.0.0",
     "koa-router": "7.4.0",
@@ -53,6 +53,7 @@
     "@types/amqplib": "0.5.7",
     "@types/bitcore-lib": "0.15.0",
     "@types/form-data": "2.2.1",
+    "@types/formidable": "1.0.31",
     "@types/koa": "2.0.46",
     "@types/koa-helmet": "3.1.2",
     "@types/koa-router": "7.0.30",
