--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bitcore-lib": "0.15.0",
     "form-data": "2.3.2",
     "inversify": "4.13.0",
+    "joi": "13.4.0",
     "koa": "2.5.1",
     "koa-body": "4.0.4",
     "koa-cors": "0.0.16",
@@ -54,6 +55,7 @@
     "@types/bitcore-lib": "0.15.0",
     "@types/form-data": "2.2.1",
     "@types/formidable": "1.0.31",
+    "@types/joi": "13.3.0",
     "@types/koa": "2.0.46",
     "@types/koa-helmet": "3.1.2",
     "@types/koa-router": "7.0.30",
