--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - sleep 5
 script:
   - npm run lint
-  - npm run test
+  - npm run coverage
 after_script:
   - greenkeeper-lockfile-upload
 after_success:
