Coverage, Unit Tests (#302)

--- a/.nycrc
+++ b/.nycrc
@@ -13,12 +13,12 @@
         "./coverage/**/*.*"
     ],
     "reporter": [
-        "lcov",
         "html",
         "text",
         "text-summary"
     ],
     "all": true,
+    "cache": false,
     "esModules": true,
     "staticType": "typescript",
     "plugins": ["classProperties", ["decorators", { "decoratorsBeforeExport": true }]]
