--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,21 @@
-node_modules
-dist
-
-.nyc_output
-coverage
-
-.idea
-
-.ipfs-docker
-.env
-
+*.log
+.DS_Store
+.coverage
 .coverage-integration
 .coverage-unit
+.editorconfig
+.env
+.envrc
+.idea
+.ipfs-docker
+.nyc_output
+.tscache
+.vscode
+Docker/data
+coverage
+dist
+node_modules
+rules
+screenshots
+temp.text
+vault.json
