--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@po.et/poet-js": "2.0.0",
     "amqplib": "0.5.2",
+    "bitcoin-core": "2.0.0",
     "bitcore-lib": "0.15.0",
     "form-data": "2.3.2",
     "inversify": "4.13.0",
