--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
 *                    @lautarodragan
 /package.json        @lautarodragan @poetapp/quality-engineering
 /package-lock.json   @lautarodragan @poetapp/quality-engineering
+/README.md           @geoffturk
