--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,27 +36,20 @@ services:
       - poet-mongo
       - poet-rabbit
       - poet-ipfs
+      - bitcoin-regtest
     command: >
       /bin/bash -c "
         sleep 10;
         npm start;
       "
-  poet-bitcoind:
+  bitcoin-regtest:
     image: ruimarinho/bitcoin-core:0.16.2
-    volumes:
-      - bitcoind1:/home/bitcoin/.bitcoin
     ports:
-      - "18332:18332"
       - "18443:18443"
-      - "18444:18444"
     command:
       -printtoconsole
       -server
-      -testnet=1
+      -regtest=1
       -rpcuser=bitcoinrpcuser
       -rpcpassword=bitcoinrpcpassword
       -rpcallowip=::/0
-
-volumes:
-  bitcoind1:
-    driver: local
