fix(docker): inlcude gcc -5 and g++ -5 and refactor ci (#451)
* install g++ and gcc for jsonld deps

* remove unstable repo list

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test-prepare-db": "node dist/babel/test/PrepareDB.js",
     "prepublishOnly": "npm run build && npm test",
     "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once",
     "create-claim": "ts-node scripts/CreateClaim"
   },
   "files": [
@@ -83,6 +84,7 @@
     "sinon": "6.3.4",
     "ts-node": "7.0.1",
     "tsconfig-paths": "3.6.0",
+    "travis-deploy-once": "5.0.4",
     "typescript": "3.0.3"
   }
 }
