test: add claim submission functional test (#448)

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pretest": "npm run test-prepare-db",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
+    "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/claim_with_data.ts",
     "test:integration": "alsatian './dist/babel/test/Integration/**/*.js' --tap",
     "coverage": "npm run coverage:unit && npm run coverage:integration",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
@@ -77,6 +78,7 @@
     "babel-cli": "6.26.0",
     "babel-plugin-module-resolver": "3.1.1",
     "concurrently": "4.0.1",
+    "ipfs-api": "24.0.1",
     "nodemon": "1.18.4",
     "nyc": "poetapp/nyc#fbc2ed1",
     "riteway": "2.0.7",
