Partial Claims - non-ascii character issue. (#429)
fix: claim uploads to IPFS that contain non-ASCII characters

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint:fix": "tslint -p ./tsconfig.json --fix",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon --delay 10 dist/babel/src\"",
     "pretest": "npm run test-prepare-db",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run test:integration && npm run test:integration:riteway",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
     "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/claim_with_data.ts",
     "test:integration": "alsatian './dist/babel/test/Integration/**/*.js' --tap",
-    "coverage": "npm run coverage:unit && npm run coverage:integration",
+    "test:integration:riteway": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
+    "coverage": "npm run coverage:unit && npm run coverage:integration && npm run test:integration:riteway",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
     "coverage:integration": "nyc --report-dir ./.coverage-integration npm run test:integration",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
