refactor: move pretest npm script (#537)

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "lint": "tslint -p ./tsconfig.with-tests.json",
     "lint:fix": "tslint -p ./tsconfig.with-tests.json --fix",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon --delay 10 dist/babel/src\"",
-    "pretest": "npm run test-prepare-db",
     "test": "npm run test:unit && npm run test:integration && npm run test:integration:riteway",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
     "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/claim_with_data.ts",
+    "pretest:integration": "npm run test-prepare-db",
     "test:integration": "alsatian './dist/babel/test/Integration/**/*.js' --tap",
     "test:integration:riteway": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
     "coverage": "npm run coverage:unit && npm run coverage:integration && npm run test:integration:riteway",
