--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon --delay 10 dist/babel/src\"",
     "test": "npm run test:unit && npm run test:integration && npm run test:integration:riteway",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
-    "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/claim_with_data.ts",
+    "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/index.ts",
     "pretest:integration": "npm run test-prepare-db",
     "test:integration": "alsatian './dist/babel/test/Integration/**/*.js' --tap",
     "test:integration:riteway": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
