refactor: final cleanup of move to riteway (#603)
refactor: final cleanup of move to riteway (#603)

remove the alsatian library
remove the `/test` directory
fix the build commands
fix `tsconfig`

references: #603
resolves: #585

--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "lint": "tslint -p ./tsconfig.with-tests.json",
     "lint:fix": "tslint -p ./tsconfig.with-tests.json --fix",
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon --delay 10 dist/babel/src\"",
-    "test": "npm run test:unit && npm run test:integration:riteway",
+    "test": "npm run test:unit && npm run test:integration",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
     "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/index.ts",
-    "pretest:integration": "npm run test-prepare-db",
-    "test:integration:riteway": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
-    "coverage": "npm run coverage:unit && npm run coverage:integration:riteway",
+    "test:integration": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
+    "coverage": "npm run coverage:unit && npm run coverage:integration",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
-    "coverage:integration:riteway": "nyc --report-dir ./.coverage-integration npm run test:integration:riteway",
+    "coverage:integration": "nyc --report-dir ./.coverage-integration npm run test:integration",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
     "build-clear": "rm -rf dist",
     "build-ts": "tsc && npm run copy-json",
@@ -74,7 +73,6 @@
     "@types/node-fetch": "1.6.9",
     "@types/pino": "4.16.1",
     "@types/sinon": "5.0.5",
-    "alsatian": "2.3.0",
     "babel-cli": "6.26.0",
     "babel-plugin-module-resolver": "3.1.1",
     "concurrently": "4.0.1",
