fix(semantic-release): resolve semantic release issues (#653)
* run the semantic-release script inside the container

* pass env to docker-compose and reuse already built node image for tag

* more changes to travis and the build script

* remove path directive from the tag command

* fix(semantic-release): run semantic release in container and remove travis-deploy-once

* move DC_FILES back

* patch(travis): add no-ci flag as release runs in Docker container and not in travis

* patch: reuse prebuilt docker image

* patch: remove travis-deploy-once

* fix: adds line feed

* patch: clean up commented out commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,6 @@ env:
 
 install:
   - DC_FILES="-f docker-compose.yml -f docker-compose.ci.yml"
-  - docker-compose $DC_FILES build
-  - docker images
   - docker-compose $DC_FILES up -d
   - sleep 10
 
@@ -40,6 +38,9 @@ deploy:
     - bash ./scripts/docker-push.sh
     on:
       all_branches: true
-
-after_deploy:
-  - npm run travis-deploy-once "npm run semantic-release"
+  - provider: script
+    skip_cleanup: true
+    script:
+      - docker-compose exec poet-node npx semantic-release --no-ci
+    on:
+      branch: master
