--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,8 +92,8 @@ services:
       - MONGODB_PASSWORD=poetPass
       - IPFS_URL=http://ipfs:5001
       - INTEGRATION_TEST_NODE_URL=http://poet-node:18080
-      - GH_TOKEN=${GH_TOKEN}
-      - NPM_TOKEN=${NPM_TOKEN}
+      - GH_TOKEN=${GH_TOKEN:-''}
+      - NPM_TOKEN=${NPM_TOKEN:-''}
     links:
       - mongo
       - rabbit
