--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "watch": "concurrently --kill-others \"tsc -w\"  \"npm run watch-babel\" \"nodemon --delay 10 dist/babel/src\"",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
-    "test:functional": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/functional/index.ts",
-    "test:integration": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/integration/index.ts",
+    "test:functional": "node ./dist/babel/tests/functional/index.js",
+    "test:integration": "node ./dist/babel/tests/integration/index.js",
     "coverage": "npm run coverage:unit && npm run coverage:integration",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
     "coverage:integration": "nyc --report-dir ./.coverage-integration npm run test:integration",
